--- a/socials.html
+++ b/socials.html
@@ -137,7 +137,7 @@
           window.open("https://blog.shorouk.dev", '_blank').focus(); //Add the url to your blog
 
         else if (id === "email") {
-          window.open("info@moe.org.co", '_blank').focus(); //Add your email after "mailto:""
+          window.open("mailito:""info@moe.org.co", '_blank').focus(); //Add your email after "mailto:""
         }
 
         else if (id === "facebook") {
