Update and rename socials.html to lupasocials.html

--- a/lupasocials.html
+++ b/lupasocials.html
@@ -121,8 +121,14 @@
       </div>
       <!-- End tiktok Icon -->
 
+      <!-- Start youtube Icon -->
+      <div id="youtube" onclick="navigate(this.id)" class="social">
+        <span class="icon youtube"><i class="fab fa-youtube"></i></span>
+      </div>
+      <!-- End youtube Icon -->
 
-
+      
+      
     </div>
 
 
@@ -137,7 +143,7 @@
           window.open("https://blog.shorouk.dev", '_blank').focus(); //Add the url to your blog
 
         else if (id === "email") {
-          window.open("mailito:""info@moe.org.co", '_blank').focus(); //Add your email after "mailto:""
+          window.open("mailto:info@moe.org.co", '_blank').focus(); //Add your email after "mailto:""
         }
 
         else if (id === "facebook") {
@@ -159,7 +165,7 @@
           window.open("https://www.tiktok.com/@moecolombia", '_blank').focus(); //Add the url to your tiktok account
         }
         else if (id === "youtube") {
-          window.open("https://www.youtube.com/", '_blank').focus(); //Add the url to your youtube account
+          window.open("https://www.youtube.com/https://www.youtube.com/@comunicacionmoe", '_blank').focus(); //Add the url to your youtube account
         }
         else if (id === "pinterest") {
           window.open("https://www.pinterest.com/", '_blank').focus(); //Add the url to your pinterest account
