--- a/lupasocial.html
+++ b/lupasocial.html
@@ -165,7 +165,7 @@
           window.open("https://www.tiktok.com/@moecolombia", '_blank').focus(); //Add the url to your tiktok account
         }
         else if (id === "youtube") {
-          window.open("https://www.youtube.com/https://www.youtube.com/@comunicacionmoe", '_blank').focus(); //Add the url to your youtube account
+          window.open("https://www.youtube.com/@comunicacionmoe", '_blank').focus(); //Add the url to your youtube account
         }
         else if (id === "pinterest") {
           window.open("https://www.pinterest.com/", '_blank').focus(); //Add the url to your pinterest account
